--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 <body>
     <main>
         <nav>
-            <img src="./images/logo.png" alt="">
-            <div>
+            <figure>
+                <img src="./images/logo.png" alt="">
+            </figure>
+            <div class="search-parent">
                 <input type="text" placeholder="Search">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </div>
