--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <i class="fa-solid fa-magnifying-glass"></i>
             </div>
 
-            <ul>
+            <ul class="nav-items">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Product</a></li>
                 <li><a href="#">About Us</a></li>
