added to container

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <main>
-        <nav>
+        <nav class="container">
             <figure>
                 <img src="./images/logo.png" alt="">
             </figure>
