--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </nav>
         
         <!-- Banner -->
-        <section class="banner">
+        <section class="banner container">
             
             <!-- Banner Left -->
             <div>
