added to category

--- a/index.html
+++ b/index.html
@@ -53,6 +53,17 @@
             <!-- Banner Right -->
              <img src="./images/banner-images/tv.png" alt="">
         </section>
+
+        <!-- Category Section -->
+         <section class="categories">
+            <h2>Categories</h2>
+            <div class="categories-card-container">
+                <div class="category-card">
+                    <h3>Watch</h3>
+                    <img src="./images/categories/watch.png" alt="">
+                </div>
+            </div>
+         </section>
     </main>
 </body>
 </html>
