--- a/index.html
+++ b/index.html
@@ -55,12 +55,20 @@
         </section>
 
         <!-- Category Section -->
-         <section class="categories">
+         <section class="categories container">
             <h2>Categories</h2>
             <div class="categories-card-container">
-                <div class="category-card">
+                <div class="category-card category-card-1">
                     <h3>Watch</h3>
                     <img src="./images/categories/watch.png" alt="">
+                </div>
+                <div class="category-card category-card-2">
+                    <h3>Bag</h3>
+                    <img src="./images/categories/bag.png" alt="">
+                </div>
+                <div class="category-card category-card-3">
+                    <h3>Shoes</h3>
+                    <img src="./images/categories/shoes.png" alt="">
                 </div>
             </div>
          </section>
