added to category

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <!-- Category Section -->
          <section class="categories container">
-            <h2>Categories</h2>
+            <h2 class="common-section-title">Categories</h2>
             <div class="categories-card-container">
                 <div class="category-card category-card-1">
                     <h3>Watch</h3>
