added to contact section

--- a/index.html
+++ b/index.html
@@ -142,7 +142,17 @@
                 </div>
             </div>
           </div>
-          </section>          
+          </section>
+          
+          <!-- Contact us section -->
+           <section class="contact-us-parent container">
+            <h2>LET'S STAY IN TOUCH</h2>
+            <p>Get updates on sales specials and more</p>
+            <div class="contact-inp-btn-parent">
+                <input type="text" placeholder="Enter your email">
+                <button class="panda-btn">Send</button>
+            </div>
+           </section>
     </main>
 </body>
 </html>
