added to contact id

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Product</a></li>
                 <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="#Contact">Contact Us</a></li>
             </ul>
         </nav>
         
@@ -145,7 +145,7 @@
           </section>
           
           <!-- Contact us section -->
-           <section class="contact-us-parent container">
+           <section class="contact-us-parent container" id="Contact">
             <h2>LET'S STAY IN TOUCH</h2>
             <p>Get updates on sales specials and more</p>
             <div class="contact-inp-btn-parent">
